update the publications

--- a/publications.html
+++ b/publications.html
@@ -70,12 +70,34 @@
       <h2 class="mb-5">Publications and Blog Posts</h2>
       
       <ul>
-        <li><strong>Quantile-based Empirical Likelihood (QEL) for inference for the Percentile Residual Life (PRL) function</strong> (Working on)</li>
+        <li><strong>Quantile-based Empirical Likelihood (QEL) for inference for the Median Residual Life (MRL) function</strong>, Master's Thesis</li>
         <li><strong>Stock Price Prediction System using Long Short-Term Memory (LSTM)</strong>, NeurIPS BlackInAI Workshop, 2018</li>
         <li><strong>Segmentation of Medical Images Using Fully Convolutional Neural Network</strong>, ICBME, Ibadan Conference on Biomedical Engineering, 2019</li>
-        <li><strong>Data Engineering Posts</strong> (<a href="https://medium.com/@yTechk" target="_blank">https://medium.com/@yTechk</a>)</li>
+        <li><a href="https://medium.com/codex/environment-variables-and-commands-in-terraform-db9cc170b7d4" target="_blank">Environment Variables and Commands in Terraform</a></li>
+        <li><a href="https://aws.plainenglish.io/creating-and-managing-iam-roles-for-data-lakes-77de3c8cecc5" target="_blank">Creating and Managing IAM Roles for Data Lakes</a></li>
+        <li><a href="https://medium.com/codex/s3-lifecycle-rules-and-encryption-set-up-using-terraform-bcd91be1da90" target="_blank">S3 Lifecycle Rules and Encryption Set Up using Terraform</a></li>
+        <li><a href="https://aws.plainenglish.io/terraform-for-data-engineers-7a694ca56733" target="_blank">Terraform for Data Engineers. Getting started with Terraform.</a></li>
+        <li><a href="https://medium.com/codex/using-blocks-in-terraform-as-a-data-engineer-5eaee8357145" target="_blank">Using Blocks in Terraform as a Data Engineer</a></li>
+        <li><a href="https://python.plainenglish.io/do-you-really-need-aws-access-key-id-and-secret-access-key-in-your-python-application-5de027312045" target="_blank">Do you really need AWS Access Key ID and Secret Access Key in your Python application?</a></li>
+        <li><a href="https://medium.com/codex/remote-storage-for-flow-deployment-in-prefect-26801b887e25" target="_blank">Remote Storage for Flow Deployment in Prefect</a></li>
+        <li><a href="https://medium.com/geekculture/deployment-orchestration-in-prefect-92730510f9fe" target="_blank">Deployment Orchestration in Prefect</a></li>
+        <li><a href="https://medium.com/codex/airflow-and-spark-running-spark-jobs-on-airflow-docker-based-solution-fc6cc8794c9b" target="_blank">Airflow and Spark: Running Spark Jobs on Airflow (Docker-based Solution)</a></li>
+        <li><a href="https://medium.com/codex/ci-cd-pipeline-for-data-engineering-workloads-with-github-action-18c4a0d31527" target="_blank">CI/CD Pipeline for Data Engineering Workloads with GitHub Actions</a></li>
+        <li><a href="https://medium.datadriveninvestor.com/databricks-on-aws-942781cba2f3" target="_blank">Databricks on AWS. How to set up Databricks on Amazon Web</a></li>
+        <li><a href="https://medium.datadriveninvestor.com/5-data-formats-you-can-not-avoid-as-a-data-engineer-a23bd689a89d" target="_blank">5 Data Formats You Cannot Avoid as a Data Engineer</a></li>
+        <li><a href="https://medium.com/codex/change-data-capture-cdc-from-postgres-to-snowflake-60c9c577fb87" target="_blank">Change Data Capture (CDC) from Postgres to Snowflake</a></li>
+        <li><a href="https://medium.com/codex/airflow-and-cassandra-writing-data-to-cassandra-database-from-airflow-e3ea2b1874c0" target="_blank">Airflow and Cassandra: Writing Data to Cassandra Database from Airflow</a></li>
+        <li><a href="https://medium.com/geekculture/dataops-using-lakefs-for-data-version-control-6ef5ddd65ebe" target="_blank">DataOps: Using LakeFS for Data Version Control</a></li>
+        <li><a href="https://medium.com/codex/yugabytedb-local-deployment-using-docker-compose-file-69965775c416" target="_blank">YugabyteDB Deployment using Docker Compose File</a></li>
+        <li><a href="https://anant.us/blog/events/using-cadence-and-cassandra-for-workflow-orchestration/" target="_blank">Using Cadence and Cassandra for Workflow Orchestration</a></li>
+        <li><a href="https://anant.us/blog/events/getting-started-with-datastax-enterprise-dse-on-docker/" target="_blank">Getting Started with DataStax Enterprise (DSE) on Docker</a></li>
+        <li><a href="https://www.youtube.com/watch?v=o2q5m3YbuUo" target="_blank">Getting Started with DataStax Enterprise (DSE) on Docker – YouTube Video</a></li>
+        <li><a href="https://anant.us/blog/events/cassandra-launch-70-basics-of-apache-cassandra/" target="_blank">Basics of Apache Cassandra</a></li>
+        <li><a href="https://www.youtube.com/watch?v=o-yU0mi4nzc" target="_blank">Basics of Apache Cassandra – YouTube Video</a></li>
+        <li><a href="https://anant.us/blog/modern-business/airflow-and-cassandra-writing-to-cassandra-from-airflow/" target="_blank">Airflow and Cassandra: Writing to Cassandra from Airflow</a></li>
+        <li><a href="https://anant.us/blog/modern-business/airflow-and-spark-running-spark-jobs-on-airflow-docker-based-solution/" target="_blank">Airflow and Spark: Running Spark Jobs on Airflow (Anant)</a></li>
+        <li><a href="https://anant.us/blog/modern-business/airflow-and-spark-running-spark-jobs-in-apache-airflow/" target="_blank">Airflow and Spark: Running Spark Jobs in Apache Airflow (Anant)</a></li>
       </ul>
-      
     </div>    
   </section>
 </div>
